// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header component renders built-in and plugin entries in the mobile menu in the same order as desktop 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      data-testid="sh-header-logo"
    >
      Logo component
    </div>
    <div
      class="BetaPill"
    >
      Beta
    </div>
    <div
      class="Menu"
    >
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
      </div>
    </div>
    <div
      data-testid="login-button-mock"
    >
      Login Button
    </div>
    <button
      aria-label="Menu"
      class="Hamburger"
      data-testid="sh-header-hamburger"
    >
      <svg
        data-testid="svg-icon-mock"
      >
        mock-svg
      </svg>
    </button>
  </header>
  <div
    data-testid="mobile-menu-mock"
  >
    <div
      data-testid="mobile-menu-entry"
      data-type="internal"
    >
      nav_menu.home
      :
      /
    </div>
    <div
      data-testid="mobile-menu-entry"
      data-type="internal"
    >
      nav_menu.legal
      :
    </div>
    <div
      data-testid="mobile-menu-entry"
      data-type="internal"
    >
      single-page-module
      :
      single-page-route
    </div>
    <div
      data-testid="mobile-menu-entry"
      data-type="external"
    >
      new-tab-module
      :
      https://example.com/plugin
    </div>
  </div>
</div>
`;

exports[`Header component renders component correctly on desktop 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      data-testid="sh-header-logo"
    >
      Logo component
    </div>
    <div
      class="BetaPill"
    >
      Beta version
    </div>
    <div
      class="Menu"
    >
      <nav
        class="Nav"
        data-testid="sh-header-nav"
      >
        <a
          aria-current="page"
          class="Active"
          data-discover="true"
          data-testid="sh-header-nav-link"
          href="/"
        >
          <span
            class="LinkText"
          >
            Home
          </span>
        </a>
        <div
          class="DropdownMenuItem"
        >
          <span
            class="LinkText"
            role="button"
          >
            Legal
             
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
          </span>
          <div
            class="Menu"
          >
            <a
              class="MenuLink"
              data-discover="true"
              data-testid="sh-header-nav-link"
              href="/terms-of-use"
            >
              <svg
                data-testid="svg-icon-mock"
              >
                mock-svg
              </svg>
              <span>
                Terms of use
              </span>
            </a>
          </div>
        </div>
        <a
          class=""
          data-discover="true"
          data-testid="sh-header-nav-link"
          href="/single-page-route"
        >
          <span
            class="LinkText"
          >
            single-page-module
          </span>
        </a>
        <a
          href="https://example.com/plugin"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="LinkText"
          >
            new-tab-module
          </span>
        </a>
      </nav>
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
        <div
          data-testid="account-widget-mock"
        >
          Account Widget
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header component renders component correctly on mobile and tablets for unauthorized users 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      data-testid="sh-header-logo"
    >
      Logo component
    </div>
    <div
      class="BetaPill"
    >
      Beta
    </div>
    <div
      class="Menu"
    >
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
      </div>
    </div>
    <div
      data-testid="login-button-mock"
    >
      Login Button
    </div>
    <button
      aria-label="Menu"
      class="Hamburger"
      data-testid="sh-header-hamburger"
    >
      <svg
        data-testid="svg-icon-mock"
      >
        mock-svg
      </svg>
    </button>
  </header>
</div>
`;
